--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   },
   "dependencies": {
     "connect": "^3.7.0",
-    "fs-extra": "^10.0.0",
     "glob": "^7.1.7",
-    "vite": "^2.3.8"
+    "playwright": "^1.12.2",
+    "vite": "^2.3.8",
+    "vite-react-jsx": "^1.1.1"
   },
   "devDependencies": {
     "@types/connect": "^3.4.34",
-    "@types/fs-extra": "^9.0.11",
     "@types/glob": "^7.1.3",
+    "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "ts-node-dev": "^1.1.6",
