--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "screenshot-v2",
   "author": "François Wouts <f@zenc.io>",
   "scripts": {
-    "start": "ts-node-dev --respawn main.ts"
+    "dev:local": "ts-node-dev --respawn main.ts",
+    "percy": "percy exec -- ts-node main.ts"
   },
   "dependencies": {
+    "@percy/cli": "^1.0.0-beta.56",
+    "@percy/puppeteer": "^2.0.0",
     "connect": "^3.7.0",
     "glob": "^7.1.7",
     "playwright": "^1.12.2",
+    "puppeteer": "^10.0.0",
     "vite": "^2.3.8",
     "vite-react-jsx": "^1.1.1"
   },
@@ -17,6 +21,7 @@
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.4"
   }
