Add click functionality

--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "author": "François Wouts <f@zenc.io>",
   "scripts": {
     "dev:renderer": "ts-node-dev --respawn renderer.ts",
-    "dev:local-screenshot": "ts-node-dev --respawn screenshooter.ts",
+    "dev:local-screenshot": "ts-node-dev --respawn --watch example screenshooter.ts",
     "dev:percy-screenshot": "percy exec -- ts-node screenshooter.ts"
   },
   "dependencies": {
     "@percy/cli": "^1.0.0-beta.56",
     "@percy/puppeteer": "^2.0.0",
+    "@types/uuid": "^8.3.0",
     "connect": "^3.7.0",
     "glob": "^7.1.7",
     "playwright": "^1.12.2",
     "puppeteer": "^10.0.0",
+    "uuid": "^8.3.2",
     "vite": "^2.3.8",
     "vite-react-jsx": "^1.1.1"
   },
