--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "François Wouts <f@zenc.io>",
   "scripts": {
     "dev:renderer": "ts-node-dev --respawn renderer.ts",
+    "dev:docker-screenshot": "docker build . -t screenshooter && mkdir -p __screenshots__ && docker run -it --mount type=bind,source=\"$(pwd)\"/__screenshots__,target=/app/__screenshots__ screenshooter",
     "dev:local-screenshot": "ts-node-dev --respawn --watch example screenshooter.ts",
     "dev:percy-screenshot": "percy exec -- ts-node screenshooter.ts"
   },
