--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -30,4 +30,10 @@ jobs:
       - run: cd example && yarn
       - run: yarn dev:renderer &
       - run: yarn dev:local-screenshot
-
+      - name: Push screenshots
+        run: |
+          git config user.name '🤖 GitHub Actions'
+          git config user.email 'screenshot-bot@zenc.io'
+          git add __screenshots__
+          git commit -m "🤖 Updated screenshots"
+          git push
