--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "screenshot-v2",
   "author": "François Wouts <f@zenc.io>",
   "scripts": {
-    "dev:renderer": "ts-node-dev --respawn renderer.ts",
+    "dev:renderer": "ts-node renderer.ts",
+    "dev:renderer:watch": "ts-node-dev --respawn renderer.ts",
     "dev:docker-screenshot": "docker build . -t screenshooter && mkdir -p __screenshots__ && docker run -it --mount type=bind,source=\"$(pwd)\"/__screenshots__,target=/app/__screenshots__ screenshooter",
     "dev:local-screenshot": "ts-node screenshooter.ts",
     "dev:local-screenshot:watch": "ts-node-dev --respawn --watch example screenshooter.ts",
