--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -37,7 +37,7 @@ jobs:
           git config user.name '🤖 GitHub Actions'
           git config user.email 'screenshot-bot@zenc.io'
           git add __screenshots__
-          if git diff --exit-code
+          if [[ -z $(git diff --exit-code) ]]
           then
             # TODO: Handle default branch differently.
             git commit -m "🤖 Updated screenshots"
