--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -37,7 +37,7 @@ jobs:
           git config user.name '🤖 GitHub Actions'
           git config user.email 'screenshot-bot@zenc.io'
           git add __screenshots__
-          if [[ -z $(git diff --exit-code) ]]
+          if git diff-index --quiet HEAD --; then
           then
             echo "✅ Screenshots have not changed."
           else
