--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -15,6 +15,8 @@ jobs:
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
+        with:
+          lfs: true
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
