--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -33,6 +33,7 @@ jobs:
       - run: yarn
       - run: cd example && yarn
       - run: yarn dev:renderer &
+      - run: rm -rf __screenshots__
       - run: yarn dev:local-screenshot
       - name: Push screenshots
         run: |
