--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -42,7 +42,7 @@ jobs:
           git add __screenshots__
           if [[ `git status --porcelain` ]]; then
             current_branch=`git branch --show-current`
-            if ["$current_branch" == "master"] || ["$current_branch" == "main"]; then
+            if [ "$current_branch" = "master" ] | [ "$current_branch" = "main" ]; then
               echo "🚨 Screenshots have changed on $current_branch!"
               exit 1
             fi
