--- a/package.json
+++ b/package.json
@@ -2,33 +2,38 @@
   "name": "screenshot-v2",
   "author": "François Wouts <f@zenc.io>",
   "scripts": {
-    "dev:renderer": "ts-node renderer.ts",
-    "dev:renderer:watch": "ts-node-dev --respawn --watch renderers renderer.ts",
-    "dev:docker-screenshot": "docker build . -t screenshooter && mkdir -p __screenshots__ && docker run -it --mount type=bind,source=\"$(pwd)\"/__screenshots__,target=/app/__screenshots__ screenshooter",
-    "dev:local-screenshot": "ts-node screenshooter.ts",
-    "dev:local-screenshot:watch": "ts-node-dev --respawn --watch react-example,solid-example,svelte-example,vue-example screenshooter.ts",
-    "dev:percy-screenshot": "percy exec -- ts-node screenshooter.ts"
+    "dev:local": "ts-node main.ts",
+    "dev:local:watch": "ts-node-dev --respawn --watch renderers,react-example,solid-example,svelte-example,vue-example main.ts",
+    "dev:percy": "percy exec -- ts-node main.ts"
   },
   "dependencies": {
-    "@percy/cli": "^1.0.0-beta.56",
-    "@percy/puppeteer": "^2.0.0",
+    "assert-never": "^1.2.1",
     "connect": "^3.7.0",
     "fs-extra": "^10.0.0",
+    "get-port": "^5.1.1",
     "glob": "^7.1.7",
-    "playwright": "^1.12.2",
-    "puppeteer": "^10.0.0",
     "vite": "^2.3.8",
     "vite-react-jsx": "^1.1.1"
   },
   "devDependencies": {
+    "@percy/cli": "^1.0.0-beta.58",
+    "@percy/puppeteer": "^2.0.0",
     "@types/connect": "^3.4.34",
     "@types/fs-extra": "^9.0.11",
     "@types/glob": "^7.1.3",
     "@types/node": "^15.12.4",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
+    "playwright": "^1.12.3",
+    "puppeteer": "^10.1.0",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "webpack": "^5.41.1",
+    "webpack-cli": "^4.7.2"
+  },
+  "peerDependencies": {
+    "@percy/cli": "*",
+    "@percy/puppeteer": "*",
+    "playwright": "*",
+    "puppeteer": "*"
   }
 }
