--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -37,7 +37,7 @@ jobs:
       - run: cd vue-example && yarn
       - run: yarn dev:renderer &
       - run: rm -rf __screenshots__
-      - run: yarn dev:local-screenshot
+      - run: yarn dev:local
       - name: Push screenshots
         run: |
           git config user.name '🤖 GitHub Actions'
