Run renderer and screenshooter simultaneously (remove Docker) (#6)

--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -35,9 +35,8 @@ jobs:
       - run: cd solid-example && yarn
       - run: cd svelte-example && yarn
       - run: cd vue-example && yarn
-      - run: yarn dev:renderer &
       - run: rm -rf __screenshots__
-      - run: yarn dev:local-screenshot
+      - run: yarn dev:local
       - name: Push screenshots
         run: |
           git config user.name '🤖 GitHub Actions'
