--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "screenshot-v2",
+  "name": "viteshot",
   "author": "François Wouts <f@zenc.io>",
+  "main": "dist",
+  "bin": {
+    "viteshot": "lib/cli.js"
+  },
   "scripts": {
+    "build": "rimraf dist && rollup -c && chmod +x dist/lib/cli.js && cp package.json dist/",
     "dev:local": "ts-node main.ts",
     "dev:local:watch": "ts-node-dev --respawn --watch renderers,react-example,solid-example,svelte-example,vue-example main.ts",
     "dev:percy": "percy exec -- ts-node main.ts"
@@ -22,11 +27,20 @@
     "@types/fs-extra": "^9.0.11",
     "@types/glob": "^7.1.3",
     "@types/node": "^15.12.4",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
     "playwright": "^1.12.3",
     "puppeteer": "^10.1.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.52.6",
+    "rollup-plugin-preserve-shebangs": "^0.2.0",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "solid-js": "^1.0.0",
+    "svelte": "^3.38.3",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.4",
+    "vue": "3",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2"
   },
