Add wildcard for artifact uploads

--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -79,4 +79,4 @@ jobs:
         if: failure()
         with:
           name: screenshots
-          path: __screenshots__/
+          path: "**/__screenshots__/"
