--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,10 @@
 name: Release
 
-on:
-  release:
-    types:
-      - created
+on: push
+# on:
+#   release:
+#     types:
+#       - created
 
 jobs:
   build:
@@ -27,13 +28,11 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-v2-yarn-
       - name: Get the version
-        if: startsWith(github.ref, 'refs/tags/v')
-        run: echo "RELEASE_VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+        # run: echo "RELEASE_VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=0.0.1" >> $GITHUB_ENV
       - name: Update the version
-        if: startsWith(github.ref, 'refs/tags/v')
         run: sed -i 's/0.0.0-dev/${{ env.RELEASE_VERSION }}/g' package.json
       - name: Publish
-        if: startsWith(github.ref, 'refs/tags/v')
         run: yarn release
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
