--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,11 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
+          always-auth: true
           node-version: ${{ matrix.node-version }}
+      - run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_AUTH_TOKEN }}" > ~/.npmrc
+        env:
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Get the version
         # run: echo "RELEASE_VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
         run: echo "RELEASE_VERSION=0.0.1" >> $GITHUB_ENV
@@ -25,5 +29,3 @@ jobs:
         run: sed -i 's/0.0.0-dev/${{ env.RELEASE_VERSION }}/g' package.json
       - name: Publish
         run: yarn release
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
