--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Install dependencies
-        run: yarn
+        run: yarn --frozen-lockfile
       - name: Get the version
         # run: echo "RELEASE_VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
         run: echo "RELEASE_VERSION=0.0.1" >> $GITHUB_ENV
