--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
 name: Release
 
-on: push
-# on:
-#   release:
-#     types:
-#       - created
+on:
+  release:
+    types:
+      - created
 
 jobs:
   build:
@@ -23,8 +22,7 @@ jobs:
       - name: Install dependencies
         run: yarn --frozen-lockfile
       - name: Get the version
-        # run: echo "RELEASE_VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
-        run: echo "RELEASE_VERSION=0.0.1" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
       - name: Update the version
         run: sed -i 's/0.0.0-dev/${{ env.RELEASE_VERSION }}/g' package.json
       - name: Publish
