--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^17.0.8",
     "@types/yargs": "^17.0.0",
     "playwright": "^1.12.3",
+    "preact": "^10.5.14",
     "puppeteer": "^10.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.52.6",
