--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -37,43 +37,38 @@ jobs:
           cd preact-example && \
           yarn --frozen-lockfile && \
           npm link viteshot && \
-          rm -rf __screenshots__ && \
           yarn viteshot && \
           rm -rf node_modules/viteshot
       - run: |
           cd react-example && \
           yarn --frozen-lockfile && \
           npm link viteshot && \
-          rm -rf __screenshots__ && \
           yarn viteshot && \
           rm -rf node_modules/viteshot
       - run: |
           cd solid-example && \
           yarn --frozen-lockfile && \
           npm link viteshot && \
-          rm -rf __screenshots__ && \
           yarn viteshot && \
           rm -rf node_modules/viteshot
       - run: |
           cd svelte-example && \
           yarn --frozen-lockfile && \
           npm link viteshot && \
-          rm -rf __screenshots__ && \
           yarn viteshot && \
           rm -rf node_modules/viteshot
       - run: |
           cd vue-example && \
           yarn --frozen-lockfile && \
           npm link viteshot && \
-          rm -rf __screenshots__ && \
           yarn viteshot && \
           rm -rf node_modules/viteshot
       - name: Erase Vite caches
         run: yarn rimraf "**/node_modules/.vite"
       - name: Push screenshots
         run: |
-          git config user.name '🤖 GitHub Actions'
-          git config user.email 'screenshot-bot@zenc.io'
+          git config user.name '🤖 Viteshot'
+          git config user.email 'viteshot-bot@zenc.io'
 
           git add .
           if [[ `git status --porcelain` ]]; then
@@ -83,7 +78,9 @@ jobs:
               git status
               exit 1
             fi
-            git commit -m "🤖 Updated screenshots"
+            git commit -m "📸 Updated screenshots"
+            # TODO: Handle race conditions between two parallel jobs.
+            git pull --rebase
             git push
             echo "⚠️ Screenshots have been updated."
           else
