--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -38,31 +38,31 @@ jobs:
           yarn --frozen-lockfile
           npm link viteshot
           yarn viteshot
-          rm -rf node_modules/viteshot
+          rimraf node_modules/viteshot
       - run: |
           cd react-example
           yarn --frozen-lockfile
           npm link viteshot
           yarn viteshot
-          rm -rf node_modules/viteshot
+          rimraf node_modules/viteshot
       - run: |
           cd solid-example
           yarn --frozen-lockfile
           npm link viteshot
           yarn viteshot
-          rm -rf node_modules/viteshot
+          rimraf node_modules/viteshot
       - run: |
           cd svelte-example
           yarn --frozen-lockfile
           npm link viteshot
           yarn viteshot
-          rm -rf node_modules/viteshot
+          rimraf node_modules/viteshot
       - run: |
           cd vue-example
           yarn --frozen-lockfile
           npm link viteshot
           yarn viteshot
-          rm -rf node_modules/viteshot
+          rimraf node_modules/viteshot
       - name: Erase Vite caches
         run: yarn rimraf "**/node_modules/.vite"
       - name: Push screenshots
