--- a/preact-example/package.json
+++ b/preact-example/package.json
@@ -37,6 +37,7 @@
     "jest": "^26.2.2",
     "jest-preset-preact": "^4.0.2",
     "preact-cli": "^3.0.0",
+    "rimraf": "^3.0.2",
     "sirv-cli": "^1.0.0-next.3",
     "typescript": "^3.7.5"
   },
