--- a/vue-example/package.json
+++ b/vue-example/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
+    "rimraf": "^3.0.2",
     "typescript": "^4.3.2",
     "vite": "^2.3.8",
     "vue-tsc": "^0.0.24"
