--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/yargs": "^17.0.0",
+    "nodegit": "^0.27.0",
     "playwright": "^1.12.3",
     "preact": "^10.5.14",
     "puppeteer": "^10.1.0",
