--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs-extra": "^10.0.0",
     "get-port": "^5.1.1",
     "glob": "^7.1.7",
+    "simple-git": "^2.40.0",
     "vite": "^2.3.8",
     "vite-tsconfig-paths": "^3.3.13",
     "yargs": "^17.0.1"
@@ -33,7 +34,6 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/yargs": "^17.0.0",
-    "nodegit": "^0.27.0",
     "playwright": "^1.12.3",
     "preact": "^10.5.14",
     "puppeteer": "^10.1.0",
