--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -12,8 +12,7 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x]
-        # os: [ubuntu-latest, windows-latest]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
         with:
