--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs-extra": "^10.0.0",
     "get-port": "^5.1.1",
     "glob": "^7.1.7",
+    "simple-git": "^2.40.0",
     "vite": "^2.3.8",
     "vite-tsconfig-paths": "^3.3.13",
     "yargs": "^17.0.1"
