--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "rimraf dist && rollup -c && chmod +x dist/lib/cli.js && cp package.json dist/ && cp README.md dist/",
     "dev": "ts-node src/cli.ts",
-    "dev:watch": "ts-node-dev src/cli.ts",
+    "dev:watch": "ts-node-dev --respawn src/cli.ts",
     "release": "yarn build && cd dist && yarn publish --non-interactive"
   },
   "dependencies": {
