--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs-extra": "^10.0.0",
     "get-port": "^5.1.1",
     "glob": "^7.1.7",
+    "rollup-plugin-friendly-type-imports": "^1.0.1",
     "simple-git": "^2.40.0",
     "vite": "^2.4.1",
     "vite-tsconfig-paths": "^3.3.13",
