Add SVGR support for React

--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "license": "MIT",
   "types": "src/index.d.ts",
   "bin": {
-    "viteshot": "lib/cli.js"
+    "viteshot": "lib/src/cli.js"
   },
   "scripts": {
-    "build": "rimraf dist && rollup -c && chmod +x dist/lib/cli.js && cp package.json dist/ && cp README.md dist/",
+    "build": "rimraf dist && rollup -c && chmod +x dist/lib/src/cli.js && cp package.json dist/ && cp README.md dist/",
     "dev": "ts-node src/cli.ts",
     "dev:watch": "ts-node-dev --respawn src/cli.ts",
     "release": "yarn build && cd dist && yarn publish --non-interactive"
   },
   "dependencies": {
+    "@svgr/core": "^5.5.0",
     "assert-never": "^1.2.1",
     "chalk": "^4.1.1",
     "connect": "^3.7.0",
