--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@percy/cli": "^1.0.0-beta.58",
     "@percy/puppeteer": "^2.0.0",
     "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-replace": "^3.0.0",
     "@types/connect": "^3.4.34",
     "@types/fs-extra": "^9.0.11",
     "@types/glob": "^7.1.3",
@@ -43,6 +44,7 @@
     "puppeteer": "^10.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.52.6",
+    "rollup-plugin-inject-process-env": "^1.3.1",
     "rollup-plugin-preserve-shebangs": "^0.2.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "solid-js": "^1.0.0",
