--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "license": "MIT",
   "types": "src/index.d.ts",
   "bin": {
-    "viteshot": "lib/cli.js"
+    "viteshot": "lib/src/cli.js"
   },
   "scripts": {
-    "build": "rimraf dist && rollup -c && chmod +x dist/lib/cli.js && cp package.json dist/ && cp README.md dist/",
+    "build": "rimraf dist && rollup -c && chmod +x dist/lib/src/cli.js && cp package.json dist/ && cp README.md dist/",
     "dev": "ts-node src/cli.ts",
     "dev:watch": "ts-node-dev --respawn src/cli.ts",
     "release": "yarn build && cd dist && yarn publish --non-interactive"
   },
   "dependencies": {
+    "@svgr/core": "^5.5.0",
     "assert-never": "^1.2.1",
     "chalk": "^4.1.1",
     "connect": "^3.7.0",
@@ -29,6 +30,8 @@
   "devDependencies": {
     "@percy/cli": "^1.0.0-beta.58",
     "@percy/puppeteer": "^2.0.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-replace": "^3.0.0",
     "@types/connect": "^3.4.34",
     "@types/fs-extra": "^9.0.11",
     "@types/glob": "^7.1.3",
@@ -41,6 +44,7 @@
     "puppeteer": "^10.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.52.6",
+    "rollup-plugin-inject-process-env": "^1.3.1",
     "rollup-plugin-preserve-shebangs": "^0.2.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "solid-js": "^1.0.0",
