--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.2",
-    "vue": "2.6.14",
+    "vue": "^3",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0"
   }
