--- a/package.json
+++ b/package.json
@@ -53,5 +53,21 @@
     "vue": "^3",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0"
+  },
+  "peerDependencies": {
+    "@percy/puppeteer": "^2.0.0",
+    "puppeteer": "^10.2.0",
+    "vite-plugin-solid": "^2.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@percy/puppeteer": {
+      "optional": true
+    },
+    "puppeteer": {
+      "optional": true
+    },
+    "vite-plugin-solid": {
+      "optional": true
+    }
   }
 }
