--- a/package.json
+++ b/package.json
@@ -56,11 +56,19 @@
   },
   "peerDependencies": {
     "@percy/puppeteer": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0",
+    "@vitejs/plugin-vue": "^1.2.3",
     "puppeteer": "^10.2.0",
     "vite-plugin-solid": "^2.0.0"
   },
   "peerDependenciesMeta": {
     "@percy/puppeteer": {
+      "optional": true
+    },
+    "@sveltejs/vite-plugin-svelte": {
+      "optional": true
+    },
+    "@vitejs/plugin-vue": {
       "optional": true
     },
     "puppeteer": {
