--- a/docs/package.json
+++ b/docs/package.json
@@ -17,6 +17,7 @@
     "@amplitude/node": "^1.8.0",
     "@docusaurus/core": "2.0.0-beta.4",
     "@docusaurus/preset-classic": "2.0.0-beta.4",
+    "@docusaurus/theme-search-algolia": "^2.0.0-beta.6",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@mdx-js/react": "^1.6.22",
