--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@ node_modules
 .pnp
 .pnp.js
 package-lock.json
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # misc
 .DS_Store
